# pico-mp3-player

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: f_util.h  picomp3libconf.h  sdconf.h
libs/fatfs/: Makefile.inc
libs/lcd/: CMakeLists.txt
libs/lcd/Config/: CMakeLists.txt  DEV_Config.c
libs/lcd/Fonts/: CMakeLists.txt
libs/lcd/GUI/: CMakeLists.txt
libs/lcd/Icm20948/: CMakeLists.txt
libs/lcd/Infrared/: CMakeLists.txt
libs/lcd/LCD/: CMakeLists.txt
src/: events.c  events.h  main.c  player.c  player.h
src/drivers/bt/: blue.c  blue.h  blue_utils.c  blue_utils.h  bt copy.c  bt.h  bt_stripped.c
src/drivers/sdmm/: diskio.c  f_util.c  sdmm.c  sdmm.h
src/drivers/video/: button.c  button.h  video.c  video.h
src/modules/filesystem/: files.c  files.h
src/modules/logger/: CMakeLists.txt  logger.c  logger.h
src/modules/ui/: CMakeLists.txt  screensaver.c  screensaver.h  ui.c  ui.h
